<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LOST LocationServices Demo</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="last_known_location">Last Known Location</string>
    <string name="location_updates">Location Updates</string>

    <string name="interval_key">interval_key</string>
    <string name="interval_title">Interval (ms)</string>

    <string name="displacement_key">displacement_key</string>
    <string name="displacement_title">Smallest Displacement (m)</string>

    <string name="priority_key">priority_key</string>
    <string name="priority_title">Priority</string>

    <string name="mock_mode_key">mock_mode_key</string>
    <string name="mock_mode_title">Mock Mode</string>
    <string name="mock_mode_summary">Enable mock locations</string>

    <string name="mock_lat_key">mock_lat_key</string>
    <string name="mock_lat_title">Mock Latitude</string>

    <string name="mock_lng_key">mock_lng_key</string>
    <string name="mock_lng_title">Mock Longitude</string>

    <string name="mock_accuracy_key">mock_accuracy_key</string>
    <string name="mock_accuracy_title">Mock Accuracy</string>

    <string name="mock_mode_gpx_key">mock_gpx_key</string>
    <string name="mock_mode_gpx_title">GPX Trace Mode</string>
    <string name="mock_mode_gpx_summary">Replay mock GPX trace from file</string>

    <string name="mock_gpx_file_key">mock_gpx_file_key</string>
    <string name="mock_gpx_file_title">GPX Filename</string>

</resources>
